--- a/Build A Base/Build A Base.CSharp.csproj
+++ b/Build A Base/Build A Base.CSharp.csproj
@@ -69,6 +69,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\CameraController.cs" />
+    <Compile Include="Assets\Scripts\DragNDrop.cs" />
     <Compile Include="Assets\Scripts\Dummy\CameraMover.cs" />
     <Compile Include="Assets\Scripts\Dummy\HiScoreTable.cs" />
     <Compile Include="Assets\Scripts\Undo Feature\Interfaces\IUndoGroup.cs" />
