Radial menu animations
Reconfigured textures

--- a/Build A Base/Assembly-CSharp-vs.csproj
+++ b/Build A Base/Assembly-CSharp-vs.csproj
@@ -57,6 +57,7 @@
      <Compile Include="Assets\Scripts\Undo Feature\UndoableActions\RotationUndoableAction.cs" />
      <Compile Include="Assets\Scripts\Undo Feature\UndoableActions\TranslationUndoableAction.cs" />
      <Compile Include="Assets\Scripts\Undo Feature\UndoableActions\UndoableAction.cs" />
+     <Compile Include="Assets\TestAnimationActivator.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
