--- a/Build A Base/Assembly-CSharp.csproj
+++ b/Build A Base/Assembly-CSharp.csproj
@@ -46,8 +46,10 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\CameraControll.cs" />
+     <Compile Include="Assets\GUILookat.cs" />
      <Compile Include="Assets\Scripts\CameraMover.cs" />
      <Compile Include="Assets\Scripts\HiScoreManager.cs" />
+     <Compile Include="Assets\Scripts\Options.cs" />
      <Compile Include="Assets\Scripts\Spinner.cs" />
      <Compile Include="Assets\Scripts\Turn Left.cs" />
      <Compile Include="Assets\Scripts\Undo Feature\Interfaces\IUndoGroup.cs" />
@@ -58,17 +60,11 @@
      <Compile Include="Assets\Scripts\Undo Feature\UndoableActions\RotationUndoableAction.cs" />
      <Compile Include="Assets\Scripts\Undo Feature\UndoableActions\TranslationUndoableAction.cs" />
      <Compile Include="Assets\Scripts\Undo Feature\UndoableActions\UndoableAction.cs" />
- <Reference Include="UnityEngine.Advertisements">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Advertisements/UnityEngine.Advertisements.dll</HintPath>
- </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.Networking">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/Networking/UnityEngine.Networking.dll</HintPath>
- </Reference>
- <Reference Include="UnityEngine.Analytics">
- <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/UnityAnalytics/UnityEngine.Analytics.dll</HintPath>
  </Reference>
  <Reference Include="Mono.Cecil">
  <HintPath>C:/Program Files/Unity/Editor/Data/Managed/Mono.Cecil.dll</HintPath>
