Fixed a small bug involving time

--- a/Build A Base/Assembly-CSharp.csproj
+++ b/Build A Base/Assembly-CSharp.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\InGameButtonManager.cs" />
      <Compile Include="Assets\MagicAnimationScript.cs" />
      <Compile Include="Assets\Scripts\CameraController.cs" />
      <Compile Include="Assets\Scripts\Dummy\CameraMover.cs" />
@@ -57,6 +58,7 @@
      <Compile Include="Assets\Scripts\Undo Feature\UndoableActions\RotationUndoableAction.cs" />
      <Compile Include="Assets\Scripts\Undo Feature\UndoableActions\TranslationUndoableAction.cs" />
      <Compile Include="Assets\Scripts\Undo Feature\UndoableActions\UndoableAction.cs" />
+     <Compile Include="Assets\Spinner.cs" />
      <Compile Include="Assets\TestAnimationActivator.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
